--- a/src/app/pages/bookmarks/bookmarks.component.scss
+++ b/src/app/pages/bookmarks/bookmarks.component.scss
@@ -89,9 +89,9 @@
   }
 
   .bookmarks-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 16px;
+    // display: grid;
+    // grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    // gap: 16px;
     
     .empty-state {
       grid-column: 1 / -1;
