--- a/src/app/components/content/content.component.scss
+++ b/src/app/components/content/content.component.scss
@@ -1,6 +1,6 @@
 .content-container {
   //   margin-bottom: 1rem;
-  margin: 1rem 1rem 1rem 1rem;
+  margin: 1rem 0rem;
   line-height: 1.6;
   word-break: break-word;
   min-height: 20px; // Ensure there's at least some space to detect visibility
