--- a/src/app/pages/feeds/feeds.component.html
+++ b/src/app/pages/feeds/feeds.component.html
@@ -651,7 +651,7 @@
                             @if (app.enabledFeature('beta')) {
                               <button
                                 mat-icon-button
-                                (click)="repostNote(event)"
+                                (click)="repostService.repostNote(event)"
                               >
                                 <mat-icon>repeat</mat-icon>
                               </button>
