--- a/src/app/pages/profile/profile-notes/profile-notes.component.html
+++ b/src/app/pages/profile/profile-notes/profile-notes.component.html
@@ -16,40 +16,7 @@
       } @else {
         <div class="notes-list">
           @for (note of profileState.sortedNotes(); track note.event.id) {
-            <mat-card class="note-card" appearance="outlined">
-              <app-user-profile
-                class="user-profile-thread"
-                view="thread"
-                [pubkey]="profileState.currentProfilePubkey()"
-              >
-                <a
-                  class="date-link"
-                  (click)="layout.openEvent(note.event.id, note.event)"
-                  [matTooltip]="note.event.created_at * 1000 | date: 'medium'"
-                  matTooltipPosition="below"
-                >
-                  {{ note.event.created_at | ago }}
-                </a>
-              </app-user-profile>
-              <app-content [content]="note.data"></app-content>
-              <!-- <mat-card-content>{{note.content}}</mat-card-content> -->
-              <mat-card-footer class="note-footer">
-                <button mat-icon-button>
-                  <mat-icon matTooltip="Reply" matTooltipPosition="below"
-                    >reply</mat-icon
-                  >
-                </button>
-                <button mat-icon-button class="note-footer-right">
-                  <mat-icon
-                    [matTooltip]="bookmark.getBookmarkTooltip(note.event.id)"
-                    matTooltipPosition="below"
-                    (click)="bookmark.toggleBookmark(note.event.id)"
-                  >
-                    {{ bookmark.getBookmarkIcon(note.event.id) }}
-                  </mat-icon>
-                </button>
-              </mat-card-footer>
-            </mat-card>
+            <app-event [event]="note.event" appearance="card"></app-event>
           }
 
           <!-- Loading more indicator -->
